generated-out/vanilla/dear-imgui-raw-vanilla/src/DearImGui/Raw/ImGuiTextFilter.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImGuiTextFilter where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void Build(ImGuiTextFilter* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiTextFilter_Build"
  imGuiTextFilter_Build :: (Ptr ImGuiTextFilter) -> IO ()
-- C: void Clear(ImGuiTextFilter* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiTextFilter_Clear"
  imGuiTextFilter_Clear :: (Ptr ImGuiTextFilter) -> IO ()
-- C: bool Draw(ImGuiTextFilter* self, const char* label, float width)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiTextFilter_Draw"
  imGuiTextFilter_Draw :: (Ptr ImGuiTextFilter) -> CString -> CFloat -> IO CBool
-- C: bool IsActive(const ImGuiTextFilter* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiTextFilter_IsActive"
  imGuiTextFilter_IsActive :: (Ptr ImGuiTextFilter) -> IO CBool
-- C: bool PassFilter(const ImGuiTextFilter* self, const char* text, const char* text_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiTextFilter_PassFilter"
  imGuiTextFilter_PassFilter :: (Ptr ImGuiTextFilter) -> CString -> CString -> IO CBool
